[package]
name = "oracles-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "time", "net"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc" }

futures-util = "0.3"
tungstenite = "0.20" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3"
tokio-native-tls = "0.3"
